--- a/[2] Preprocessor.ipynb
+++ b/[2] Preprocessor.ipynb
@@ -195,7 +195,7 @@
     "                tokens.append(nltk.PorterStemmer().stem(a[0]))\n",
     "            else:\n",
     "                tokens.append(a[1])\n",
-    "\n",
+    "Verbsand coordinating conjunctions\n",
     "        lst.append(' '.join(tokens))\n",
     "    return lst "
    ]
@@ -424,6 +424,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
